force-app/main/default/objects/aig_AI_Model__c/aig_AI_Model__c.object-meta.xml
<CustomObject>
    <label>AI Model</label>
    <nameField>
        <label>AI Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>