force-app/main/default/objects/aig_AI_Model__c/fields/aig_Ethical_Considerations__c.field-meta.xml
<CustomField>
    <fullName>aig_Ethical_Considerations__c</fullName>
    <description>Any ethical considerations that should be evaluated when using this Model</description>
    <label>Ethical Considerations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>