force-app/main/default/objects/aig_AI_Model__c/fields/aig_External_Risk_Scorecard_URL__c.field-meta.xml
<CustomField>
    <fullName>aig_External_Risk_Scorecard_URL__c</fullName>
    <label>External Risk Scorecard URL</label>
    <type>Url</type>
</CustomField>