force-app/main/default/objects/aig_AI_Model__c/fields/aig_Provider__c.field-meta.xml
<CustomField>
    <fullName>aig_Provider__c</fullName>
    <inlineHelpText>The organization providing the model.</inlineHelpText>
    <label>Provider</label>
    <length>80</length>
    <type>Text</type>
</CustomField>