force-app/main/default/objects/aig_AI_Model__c/fields/aig_Provider_Site__c.field-meta.xml
<CustomField>
    <fullName>aig_Provider_Site__c</fullName>
    <label>Provider Site</label>
    <type>Url</type>
</CustomField>