force-app/main/default/objects/aig_AI_Model__c/fields/aig_Regulatory_Compliance_Risk__c.field-meta.xml
<CustomField>
    <fullName>aig_Regulatory_Compliance_Risk__c</fullName>
    <label>Regulatory Compliance Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <color>#009900</color>
                <label>🟢 Low</label>
            </value>
            <value>
                <fullName>Moderate</fullName>
                <color>#F3D904</color>
                <label>🟡 Moderate</label>
            </value>
            <value>
                <fullName>High</fullName>
                <color>#FF0000</color>
                <label>🔴 High</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>