force-app/main/default/objects/aig_AI_Model__c/fields/aig_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>aig_Release_Date__c</fullName>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>