force-app/main/default/objects/aig_AI_Model__c/fields/aig_Status__c.field-meta.xml
<CustomField>
    <fullName>aig_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evaluating for Use</fullName>
                <label>⌛ Evaluating for Use</label>
            </value>
            <value>
                <fullName>Approved for Use</fullName>
                <label>✅  Approved for Use</label>
            </value>
            <value>
                <fullName>Not Approved for Use</fullName>
                <label>⛔ Not Approved for Use</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>