force-app/main/default/objects/aig_AI_Model__c/fields/aig_Suggested_Use__c.field-meta.xml
<CustomField>
    <fullName>aig_Suggested_Use__c</fullName>
    <description>The recommended use case types for this Model.</description>
    <label>Suggested Use</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>