force-app/main/default/objects/aig_AI_Model__c/fields/aig_Training_Data_As_Of__c.field-meta.xml
<CustomField>
    <fullName>aig_Training_Data_As_Of__c</fullName>
    <label>Training Data As Of</label>
    <type>Date</type>
</CustomField>