force-app/main/default/objects/aig_AI_Model__c/fields/aig_Version__c.field-meta.xml
<CustomField>
    <fullName>aig_Version__c</fullName>
    <label>Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>